--- a/templates/base.html
+++ b/templates/base.html
@@ -56,8 +56,8 @@
                     
                 </li>
                 <li>
-                    <a href="#informesSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="bi bi-receipt-cutoff"></i>   Informes</a>
-                    
+                    <a class="sidebar-text sidebar-button" href="{% url 'reportes' %}" ><i class="bi bi-receipt-cutoff"></i>   Reportes</a>
+
                 </li>
                 <li>
                     <a href="#cierreSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="bi bi-cash-stack"></i>   Cierre de caja</a>
