--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#ventasSubmenu" data-toggle="collapse" class="dropdown-toggle sidebar-text right-arrow sidebar-button"><i class="bi bi-cart3"></i>   Ventas</a>
+                    <a class="sidebar-text sidebar-button" href="{% url 'ventas-lista' %}"><i class="bi bi-cart3"></i>   Ventas</a>
                 </li>
                 <li>
                     <a class="sidebar-text sidebar-button" href="{% url 'reportes' %}"><i class="bi bi-receipt-cutoff"></i>   Reportes</a>
